[workspace]
members = ["reliquary-proc-macro"]

[package]
name = "reliquary"
version = "6.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
etherparse = "0.15"
kcp = "0.5"
protobuf = "~3.4.0" # match the protobuf version used in reliquary-codegen
rand_mt = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
reliquary-proc-macro = { path = "reliquary-proc-macro" }
