[workspace]
members = ["reliquary-proc-macro"]

[package]
name = "reliquary"
version = "9.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["network", "resource"]
network = ["kcp", "base64", "etherparse", "rand_mt", "protobuf"]
resource = ["reliquary-proc-macro", "twox-hash", "serde", "serde_json"]

[dependencies]
base64 = { version = "0.22", optional = true }
etherparse = { version = "0.17", optional = true }
kcp = { version = "0.5", optional = true }
protobuf = { version = "~3.7.1", optional = true } # match the protobuf version used in reliquary-codegen
rand_mt = { version = "5.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tracing = "0.1"
reliquary-proc-macro = { path = "reliquary-proc-macro", optional = true }
twox-hash = { version = "2.1.0", features = ["xxhash64"], default-features = false, optional = true }
